--- a/README.org
+++ b/README.org
@@ -18,6 +18,10 @@ contenido.
 
 ** Marzo de 2021
 
+*** 07-Mar-21
++ [[https://users-cs.au.dk/birke/papers/free-theorems-sep-logic.pdf ][Theorems for free from separation logic specifications]]. ~ Lars Birkedal et als. #ITP #Coq
++ [[https://www.isa-afp.org/entries/Mereology.html][Mereology (in Isabelle/HOL)]]. ~ Ben Blumson. #ITP #IsabelleHOL #Logic
+
 *** 06-Mar-21
 + [[https://wiki.tfpie.science.ru.nl/images/a/a6/TFPIE_AHF_JV.pdf][Teaching automated reasoning and formally verified functional programming in Agda and Isabelle/HOL]]. ~ Asta Halkjær From, Jørgen Villadsen. #Logic #FunctionalProgramming #ITP #Agda #IsabelleHOL
 + [[https://www.scitepress.org/Papers/2020/98936/98936.pdf][Formalization and verification of reconfigurable discrete-event system using model driven engineering and Isabelle/HOL]]. ~ S. Soualah, Y. Hafidi, M. Khalgui, A. Chaoui, L. Kahloul. #ITP #IsabelleHOL
