--- a/README.org
+++ b/README.org
@@ -18,6 +18,13 @@ contenido.
 
 ** Marzo de 2021
 
+*** 12-Mar-21
++ [[https://www.isa-afp.org/entries/Hermite_Lindemann.html][The Hermite–Lindemann–Weierstraß transcendence theorem (in Isabelle/HOL)]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
++ [[http://matt.might.net/articles/partial-orders/][Order theory for computer scientists]]. ~ Matt Might (@mattmight). #Math #CompSci #Haskell #FunctionalProgramming via @CompSciFact
++ [[https://www.newyorker.com/culture/culture-desk/what-is-mathematics][What is mathematics?]] ~ Alec Wilkinson. #Math
++ [[https://infinitedescent.xyz/][An infinite descent into pure mathematics]]. ~ Clive Newstead. #eBook #Math
++ [[http://eugeniacheng.com/wp-content/uploads/2017/02/cheng-proofguide.pdf][How to write proofs: a quick guide]]. ~ Eugenia Cheng (@DrEugeniaCheng). #Logic #Math
+
 *** 11-Mar-21
 + [[https://notxor.nueva-actitud.org/2021/03/11/emacs-y-lsp-mode.html][Emacs y lsp-mode]]. #Emacs #LSPmode
 
