--- a/README.org
+++ b/README.org
@@ -18,6 +18,9 @@ contenido.
 
 ** Marzo de 2021
 
+*** 13-Mar-21
++ [[https://magnus.therning.org/posts/2021-03-05-000-flycheck-and-hls.html][Flycheck and HLS]]. ~ Magnus Therning. #Emacs #LSPmode #Haskell #HLS via @jneira
+
 *** 12-Mar-21
 + [[https://www.isa-afp.org/entries/Hermite_Lindemann.html][The Hermite–Lindemann–Weierstraß transcendence theorem (in Isabelle/HOL)]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
 + [[http://matt.might.net/articles/partial-orders/][Order theory for computer scientists]]. ~ Matt Might (@mattmight). #Math #CompSci #Haskell #FunctionalProgramming via @CompSciFact
