--- a/README.org
+++ b/README.org
@@ -18,6 +18,10 @@ contenido.
 
 ** Marzo de 2021
 
+*** 25-Mar-21
++ [[https://lexi-lambda.github.io/blog/2021/03/25/an-introduction-to-typeclass-metaprogramming/][An introduction to typeclass metaprogramming]]. ~ Alexis King (@lexi_lambda). #Haskell #FunctionalProgramming
++ [[https://www.tweag.io/blog/2021-03-25-haskell-java/][How to build hybrid Haskell and Java programs]]. ~ Facundo Domínguez, Andreas Hermann. #Haskell #Java
+
 *** 24-Mar-21
 + [[https://courses.cs.washington.edu/courses/cse505/17au/][Course: Programming languages]]. ~ Zach Tatlock, Leonardo De Moura. #CompSci #ITP #LeanProver
 + [[https://docs.google.com/document/d/1V22TC-vf6b7ciBquR5-IK3wJ1WCPhrBLWIP1Tf18z0Y/edit#][Coq fundamentals]]. ~ Zach Tatlock. #ITP #Coq
